# update_issue

./: .gitignore  DEPLOYMENT_GUIDE.md  ENHANCED_FEATURES.md  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  README_DOWNLOAD.md  activate_venv.sh  basic_wps_api.py  check_services.sh  check_status.py  create_all_missing_gitlab_issues.py  database_backup_20250915_141423.sql  database_backup_20250915_141426.sql  database_backup_20250915_141428.sql  database_backup_20250915_153138.sql  database_backup_20250917_095820.sql  enhanced_wps_api.py  health_check.py  issues_backup_20250917_102957.sql  main.py  manage_sync.sh  manual_sync_pending.py  monitor_progress.py  monitor_sync.sh  pyproject.toml  pyrightconfig.json  run.sh  setup_python_env.sh  start_enhanced_api.sh  start_wps_api.sh  test.sh  test_immediate_sync.py  wps_upload_api.py  wps_upload_script_minimal.py  wps_upload_script_optimized.py  wps_upload_script_v3.py
backups/: issues_backup_20251014_115645.json
config/: auto_sync_config.json  gitlab.env.example  user_mapping.json
docs/: ARCHITECTURE.md  README.md  wps_upload_script_optimized.py
gitlab_tools/: LABEL_MAPPING_GUIDE.md  OPTIMIZATION_GUIDE.md  README.md  SECURITY_GUIDE.md  SERVICE_STATUS_REPORT.md  batch_sync_all_issues.py  check_gitlab_urls.py  enhanced_sync_database_to_gitlab.py  gitlab_issue_manager.py  main.py  manage_optimized_service.sh  process_sync_queue.py  scheduled_sync.py  setup_automation.sh  setup_cron.sh  setup_database_triggers.sql  setup_optimized_cron.sh  setup_optimized_triggers.sql  setup_passwords.sh  setup_progress_monitoring.sh  sync_database_to_gitlab.py  sync_gitlab_progress.py
mysql_config/: enhanced_issues_table.sql  (+6 more)
(+60 files in other folders)
